# Testing

./: CMakeLists.txt  LICENSE  LangulusUtilities.cmake  README.md
include/Langulus/: Testing.hpp
source/: Main.cpp  Main.hpp
